Fixed swagger for post/get json
